gatewayapi/manifests/gatewayapi/gateway.yml
kind: Gateway
apiVersion: gateway.networking.k8s.io/v1
metadata:
  name: timeapi
spec:
  gatewayClassName: contour
  listeners:
    - name: http
      hostname: "*.kind.local"
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All
